--- a/src/components/LinksIconProjects.astro
+++ b/src/components/LinksIconProjects.astro
@@ -6,18 +6,19 @@ interface link {
   src: ImageMetadata;
 }
 interface Props{
-  links:link[]
+  links:link[],
+  loading?: "eager" | "lazy";
 }
 import Icon from "./Icon.astro";
 
-const {links} = Astro.props;
+const {links, loading="lazy"} = Astro.props;
 ---
 {
   links.map(({alt,link, src}) => {
     if(link !== ""){
       return(
         <a href={link} target={alt !== "Detail" ? "_blank" : "_parent"} class="text-white hover:text-orange-400">
-          <Icon src={src} alt={alt}/>
+          <Icon src={src} alt={alt} loading={loading}/>
         </a>
       )
     }
