feat: preparando para despliegue

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -47,7 +47,7 @@ if(pathName.includes("projects")){
     format="webp"
     src={project.img}
     alt={project.title}
-    class="rounded-lg border border-zinc-700 border-solid"
+    class="rounded-lg border border-zinc-700 border-solid aspect-[16/8] object-cover"
   />
   <div class="p-1 text-base text-gray-400 mt-1 bg-zinc-800 border border-solid border-zinc-700 rounded-md">
     <p class="text-white block text-center font-bold mb-1">{project.title}</p>
