--- a/src/components/DetailProject.astro
+++ b/src/components/DetailProject.astro
@@ -36,6 +36,7 @@ const link = [
       src={project.img}
       alt={project.title}
       class="rounded-lg border border-zinc-700 border-solid"
+      transition:name={project.title}
     />
     <p class="text-gray-400 text-base my-2"><strong class="text-orange-500">Skills:</strong> {project?.skills}</p>
     <div class="flex flex-row justify-center gap-x-4">
