--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,13 @@
 ---
-// import { ViewTransitions } from 'astro:transitions';
+import '@fontsource-variable/onest';
 import '../styles/global.css';
+import { ViewTransitions } from 'astro:transitions';
 import Navbar from '../components/Navbar.astro';
 const title = Astro.props.title;
 const {id} = Astro.params;
 const colors = ["blue", "cyan", "indigo"];
 const color = colors[Math.floor(Math.random() * colors.length)];
 ---
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +15,7 @@ const color = colors[Math.floor(Math.random() * colors.length)];
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
   <title>{title}</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-  <!-- <ViewTransitions /> -->
+  <ViewTransitions />
 </head>
 <body class={`text-base text-white bg-gradient-to-r from-gray-900 from-40% via-${color}-950 via-70% to-gray-900 to-95% min-h-screen`}>
   { !id && <Navbar color={color} /> }
