--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -40,7 +40,8 @@ const {color} = Astro.props;
   const btnMenu = document.getElementById('btnMenu');
   const ul = document.querySelector('ul');
   btnMenu?.addEventListener("click", ()=>{
-    btnMenu.classList.toggle('rotate-0');
+    console.log("click");
+    btnMenu.classList.toggle('rotate-180');
     ul?.classList.toggle('h-[160px]');
   });
 </script>
