fix: ajuste boton submite

--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -18,3 +18,9 @@ import SendButton from "./SendButton";
     <SendButton client:load />
   </form>
 </ContentLayout>
+<script>
+  const form = document.getElementById('contactForm');
+  form?.addEventListener("submit", (event)=>{
+    event.preventDefault();
+  });
+</script>
