feat: definicion de tipos y constantes

--- a/src/components/LinksIconProjects.astro
+++ b/src/components/LinksIconProjects.astro
@@ -1,10 +1,10 @@
 ---
 // Componente para los iconos de los proyectos
-interface link {
-  alt: string;
-  link: any;
-  src: ImageMetadata;
-}
+// interface link {
+//   alt: string;
+//   link: any;
+//   src: ImageMetadata;
+// }
 interface Props{
   links:link[],
   loading?: "eager" | "lazy";
