--- a/src/pages/challenges/[id].astro
+++ b/src/pages/challenges/[id].astro
@@ -1,20 +1,10 @@
 ---
-interface project {
-    title:       string;
-    img:         string;
-    linkGithub:  string;
-    linkLive:    string;
-    description: string;
-    details:     string;
-    author:      string;
-    skills:      string;
-    client:      string;
-}
 import Layout from '../../layouts/Layout.astro';
 
-import data from '../../data/challenge.json'
+// import data from '../../data/challenge.json'
 import DetailProject from '../../components/DetailProject.astro';
-// const data:project[] = await fetch('https://api.example.com/projects').then(response => response.json());
+import { URLChallenges } from '../../utils/const';
+const data:project[] = await fetch(URLChallenges).then(response => response.json());
 const { id } = Astro.params;
 const project = data.find((_, index:number) => index === Number(id));
 if(!project){
