--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -1,19 +1,9 @@
 ---
-interface project {
-    title:       string;
-    img:         string;
-    linkGithub:  string;
-    linkLive:    string;
-    description: string;
-    details:     string;
-    author:      string;
-    skills:      string;
-    client:      string;
-}
 import Layout from '../../layouts/Layout.astro';
+import {URLProjects} from '../../utils/const';
 
-// const data:project[] = await fetch('https://api.example.com/projects').then(response => response.json());
-import data from '../../data/projects.json'
+const data:project[] = await fetch(URLProjects).then(response => response.json());
+// import data from '../../data/projects.json'
 import DetailProject from '../../components/DetailProject.astro';
 const { id } = Astro.params;
 const project = data.find((_, index:number) => index === Number(id));
