feat: cambio de rutas relativas a absolutas

--- a/src/components/DetailProject.astro
+++ b/src/components/DetailProject.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from 'astro:assets';
-import IconGithub from '../assets/icons/brand-github.svg';
-import IconWeb from '../assets/icons/world-www.svg';
-import IconBack from '../assets/icons/arrow-back-up.svg';
-import Icon from './Icon.astro';
-import LinksIconProjects from './LinksIconProjects.astro';
+import IconGithub from '@assets/icons/brand-github.svg';
+import IconWeb from '@assets/icons/world-www.svg';
+import IconBack from '@assets/icons/arrow-back-up.svg';
+import Icon from '@components/Icon.astro';
+import LinksIconProjects from '@components/LinksIconProjects.astro';
 
 const { project, id } = Astro.props;
 const link = [
