--- a/src/components/EducationCard.astro
+++ b/src/components/EducationCard.astro
@@ -1,6 +1,6 @@
 ---
 // Componente tarjeta de educación
-import ExperienceLayout from "../layouts/ExperienceLayout.astro";
+import ExperienceLayout from "@layouts/ExperienceLayout.astro";
 
 const { education, classes="" } = Astro.props;
 ---
