--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -1,6 +1,6 @@
 ---
 // Componente tarjeta de experiencia
-import ExperienceLayout from "../layouts/ExperienceLayout.astro";
+import ExperienceLayout from "@layouts/ExperienceLayout.astro";
 
 const { experience, classes="" } = Astro.props;
 ---
