--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,8 +3,8 @@
 interface Props {
   color: string;
 }
-import A from "./A.astro";
-import arrow from '../assets/icons/caret-up.svg';
+import A from "@components/A.astro";
+import arrow from '@assets/icons/caret-up.svg';
 import { Image } from "astro:assets";
 const sections = ['Home', 'Experience', 'Projects', 'Challenges', 'Contact'];
 const colors = ['red', 'blue', 'green', 'yellow', 'purple'];
