--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -1,10 +1,10 @@
 ---
 // Componente de la sección de contacto
-import ContentTitleLayout from "../layouts/ContentTitleLayout.astro";
-import ContentLayout from "../layouts/ContentLayout.astro";
-import TitleSection from "./TitleSection.astro";
-import Input from "./Input.astro";
-import SendButton from "./SendButton";
+import ContentTitleLayout from "@layouts/ContentTitleLayout.astro";
+import ContentLayout from "@layouts/ContentLayout.astro";
+import TitleSection from "@components/TitleSection.astro";
+import Input from "@components/Input.astro";
+import SendButton from "@components/SendButton";
 ---
 <ContentLayout id="contact">
   <ContentTitleLayout>
