--- a/src/components/SectionExperience.astro
+++ b/src/components/SectionExperience.astro
@@ -1,17 +1,17 @@
 ---
 // Componente de la sección de experiencia
-import ContentTitleLayout from '../layouts/ContentTitleLayout.astro';
-import ContentLayout from '../layouts/ContentLayout.astro';
-import TitleSubSection from './TitleSubSection.astro';
-import ExperienceCard from './ExperienceCard.astro';
-import EducationCard from './EducationCard.astro';
-import TitleSection from './TitleSection.astro';
-import Badge from './Badge.astro';
+import ContentTitleLayout from '@layouts/ContentTitleLayout.astro';
+import ContentLayout from '@layouts/ContentLayout.astro';
+import TitleSubSection from '@components/TitleSubSection.astro';
+import ExperienceCard from '@components/ExperienceCard.astro';
+import EducationCard from '@components/EducationCard.astro';
+import TitleSection from '@components/TitleSection.astro';
+import Badge from '@components/Badge.astro';
 
-import skills from '../data/skills.json';
-import experience from '../data/experience.json';
-import otherExperience from '../data/otherExperience.json';
-import education from '../data/education.json';
+import skills from '@data/skills.json';
+import experience from '@data/experience.json';
+import otherExperience from '@data/otherExperience.json';
+import education from '@data/education.json';
 ---
 <ContentLayout id="experience">
   <ContentTitleLayout>
