--- a/src/components/SectionHome.astro
+++ b/src/components/SectionHome.astro
@@ -1,17 +1,17 @@
 ---
 // Componente de la sección de inicio
 import { Image } from 'astro:assets';
-import ContentTitleLayout from '../layouts/ContentTitleLayout.astro';
-import ContentLayout from '../layouts/ContentLayout.astro';
-import TitleSection from './TitleSection.astro';
-import Icon from './Icon.astro';
+import ContentTitleLayout from '@layouts/ContentTitleLayout.astro';
+import ContentLayout from '@layouts/ContentLayout.astro';
+import TitleSection from '@components/TitleSection.astro';
+import Icon from '@components/Icon.astro';
 
-import Profile from '../assets/img/profile2.png';
-import Linkedin from '../assets/icons/brand-linkedin.svg';
-import Github from '../assets/icons/brand-github.svg';
-import PDF from '../assets/icons/file-type-pdf.svg';
-import FM from '../assets/icons/frontend-mentor.svg';
-import CW from '../assets/icons/code-wars.svg';
+import Profile from '@assets/img/profile2.png';
+import Linkedin from '@assets/icons/brand-linkedin.svg';
+import Github from '@assets/icons/brand-github.svg';
+import PDF from '@assets/icons/file-type-pdf.svg';
+import FM from '@assets/icons/frontend-mentor.svg';
+import CW from '@assets/icons/code-wars.svg';
 
 const link = [
   {alt:"Github", src:Github, link:"https://github.com/Marco90v"},
