--- a/src/components/SectionProjects.astro
+++ b/src/components/SectionProjects.astro
@@ -3,13 +3,13 @@
 interface Props {
   all?: "no" | "yes";
 }
-import ContentTitleLayout from '../layouts/ContentTitleLayout.astro';
-import ContentCardLayout from '../layouts/ContentCardLayout.astro';
-import ContentLayout from '../layouts/ContentLayout.astro';
-import TitleSection from './TitleSection.astro';
-import ProjectCard from './ProjectCard.astro';
-import ViewMore from './ViewMore.astro';
-import { URLProjects } from '../utils/const';
+import ContentTitleLayout from '@layouts/ContentTitleLayout.astro';
+import ContentCardLayout from '@layouts/ContentCardLayout.astro';
+import ContentLayout from '@layouts/ContentLayout.astro';
+import TitleSection from '@components/TitleSection.astro';
+import ProjectCard from '@components/ProjectCard.astro';
+import ViewMore from '@components/ViewMore.astro';
+import { URLProjects } from '@utils/const';
 // import data from '../data/projects.json';
 const data:project[] = await fetch(URLProjects).then(response => response.json());
 const { all="no" } = Astro.props;
