--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,13 @@
 ---
 import '@fontsource-variable/onest';
-import '../styles/global.css';
+import '@styles/global.css';
 import { ViewTransitions } from 'astro:transitions';
-import Navbar from '../components/Navbar.astro';
+import Navbar from '@components/Navbar.astro';
 const title = Astro.props.title;
 const {id} = Astro.params;
 const colors = ["blue", "cyan", "indigo"];
 const color = colors[Math.floor(Math.random() * colors.length)];
-import favicon from '../assets/icons8-source-code-48.png';
+import favicon from '@assets/icons8-source-code-48.png';
 ---
 <!DOCTYPE html>
 <html lang="en">
