--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 // Pagina de inicio
-import SectionHome from '../components/SectionHome.astro';
-import SectionExperience from '../components/SectionExperience.astro';
-import SectionProjects from '../components/SectionProjects.astro';
-import SectionChallenges from '../components/SectionChallenges.astro';
-import SectionContact from '../components/SectionContact.astro';
-import Layout from '../layouts/Layout.astro';
+import SectionHome from '@components/SectionHome.astro';
+import SectionExperience from '@components/SectionExperience.astro';
+import SectionProjects from '@components/SectionProjects.astro';
+import SectionChallenges from '@components/SectionChallenges.astro';
+import SectionContact from '@components/SectionContact.astro';
+import Layout from '@layouts/Layout.astro';
 ---
 <Layout title="Portfolio frontend developer | Marco Velasquez Figarella">
   <SectionHome />
