--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,7 +1,7 @@
 ---
 // Pagina proyectos
-import Layout from "../../layouts/Layout.astro";
-import SectionProjects from "../../components/SectionProjects.astro";
+import Layout from "@layouts/Layout.astro";
+import SectionProjects from "@components/SectionProjects.astro";
 ---
 
 <Layout title="Projects | Marco Velasquez Figarella">
