--- a/src/pages/challenges/index.astro
+++ b/src/pages/challenges/index.astro
@@ -1,7 +1,7 @@
 ---
 // Pagina retos
-import Layout from "../../layouts/Layout.astro";
-import SectionChellenges from "../../components/SectionChallenges.astro";
+import Layout from "@layouts/Layout.astro";
+import SectionChellenges from "@components/SectionChallenges.astro";
 ---
 
 <Layout title="Challenge | Marco Velasquez Figarella">
