--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -1,10 +1,10 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import {URLProjects} from '../../utils/const';
+import Layout from '@layouts/Layout.astro';
+import {URLProjects} from '@utils/const';
 
 const data:project[] = await fetch(URLProjects).then(response => response.json());
 // import data from '../../data/projects.json'
-import DetailProject from '../../components/DetailProject.astro';
+import DetailProject from '@components/DetailProject.astro';
 const { id } = Astro.params;
 const project = data.find((_, index:number) => index === Number(id));
 if(!project){
